# KPI

./: .clang-format  README.md
1 Sem/: README.md
1 Sem/Basics of Programming/: 1_roman.c  2_triangle.c  3_cubic.c  4_sort.c  5_string_sort.c  6_sle.c  8_circuits.c  README.md
1 Sem/Basics of Programming/Source/: 7_nonlinear.c  utils.h
2 Sem/Algorithms and Data Structures/lab2/: input.txt  input_5_5.txt  lab.py  test.txt
2 Sem/Algorithms and Data Structures/lab3/: Cargo.toml
2 Sem/Algorithms and Data Structures/lab4/: Cargo.toml  data.txt
2 Sem/Algorithms and Data Structures/lab7/: Cargo.toml
2 Sem/History/: sem1.md  sem2.md  sem4.md
3 Sem/: README.md
3 Sem/Algorithms/lab1/: CMakeLists.txt
3 Sem/Algorithms/lab2/: Cargo.toml  pa2.docx
3 Sem/Algorithms/lab3/: index.html  pa3.docx  package.json  pnpm-lock.yaml
3 Sem/Algorithms/lab4/: .clang-format  CMakeLists.txt  imgui.ini  pa4.docx
3 Sem/Algorithms/lab4/src/: btree.hh  main.cc
3 Sem/Algorithms/lab5/: ai.py  main.py  pa5.docx  pyproject.toml
3 Sem/Algorithms/lab6/: main.py  pyproject.toml
3 Sem/Assembly/lab1/: lab.asm
3 Sem/Coursework/: cw.docx
3 Sem/Coursework/sql/: data.sql  drop.sql  functions.sql  scheme.sql  triggers.sql  users.sql  views.sql
3 Sem/Databases/exam/: data.sql  q1.sql  q4.sql  schema.sql
3 Sem/Databases/lab2/: brands.csv  data.sql  db.sql  scheme.sql
3 Sem/Databases/lab3/: 2a1.sql  2a2.sql  2b1.sql  2b2.sql  2c.sql  2d.sql  2e.sql  2f.sql  2g.sql  2h1.sql  2h2.sql  3a.sql  3b.sql  routes.txt
3 Sem/Databases/lab4/: 1a.sql  1b.sql  1c.sql  1d.sql  1e.sql  1f.sql  1g.sql  1h1.sql  1h2.sql  2a.sql  2b.sql  2c.sql  (+1 more)
3 Sem/Psychology/: Sem3.md
3 Sem/Web/: README.md
(+97 files in other folders)
